--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@sanity/client": "^6.28.4",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
